force-app/main/default/objects/Email_Request__e/Email_Request__e.object-meta.xml
<CustomObject>
    <description>Platform event to publish email requests</description>
    <label>Email Request</label>
    <pluralLabel>Email Requests</pluralLabel>
</CustomObject>