force-app/main/default/objects/Email_Request__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Id of the Salesforce Record</description>
    <label>Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>