force-app/main/default/objects/Email_Request__e/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>Id of the Email Template in the External System</description>
    <label>Template Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>