force-app/main/default/objects/Email_Request__e/fields/To_Email__c.field-meta.xml
<CustomField>
    <fullName>To_Email__c</fullName>
    <description>Email to be sent to</description>
    <label>To Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>